--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -856,60 +856,85 @@ table{
 
 // スケジュール管理ページ
 
+%events__fixed {
+	min-width: 700px;
+	overflow-wrap: break-word;
+	font-weight: normal;
+	text-align: left;
+	position: sticky;
+	left: 0;
+	z-index: 1;
+		&:before {
+			pointer-events: none;
+			content: "";
+			position: absolute;
+			top: -1px;
+			left: -1px;
+			width: 100%;
+			height: 100%;
+			border: 1px solid;
+			box-sizing: content-box;
+		}
+}
+
 .event-area{
 	width: 90vw;
 	margin: 0 calc(50% - 45vw);
 	.events {
 		overflow-x: auto;
 		margin-top: 5px;
+		background-color: white;
 		table {
 			border-collapse: collapse;
 			table-layout: fixed;
+			.events__fixed{
+				@extend %events__fixed;
+				&--ok{
+					@extend %events__fixed;
+					min-width: 47px;
+					text-align: center;
+					left: 700px;
+				}
+				&--neither{
+					@extend %events__fixed;
+					min-width: 47px;
+					text-align: center;
+					left: 747px;
+				}
+				&--ng{
+					@extend %events__fixed;
+					min-width: 47px;
+					text-align: center;
+					left: 794px;
+				}
+			}
 			tr:nth-child(even) {
 				background-color: #efefef;
-				.fixed {
-					min-width: 700px;
-					overflow-wrap: break-word;
-					font-weight: normal;
-					text-align: left;
-					position: sticky;
-					left: 0;
-					z-index: 1;
+				.events__fixed{
 					background-color: #efefef;
-					&:before {
-						pointer-events: none;
-						content: "";
-						position: absolute;
-						top: -1px;
-						left: -1px;
-						width: 100%;
-						height: 100%;
-						border: 1px solid;
-						box-sizing: content-box;
+					&--ok{
+						background-color: #efefef;
+					}
+					&--neither{
+						background-color: #efefef;
+					}
+					&--ng{
+						background-color: #efefef;
 					}
 				}
 			}
 			tr:nth-child(odd) {
 				background-color: white;
-				.fixed {
-					min-width: 700px;
-					overflow-wrap: break-word;
-					font-weight: normal;
-					text-align: left;
-					position: sticky;
-					left: 0;
-					z-index: 1;
+				.events__fixed{
 					background-color: white;
-					&:before {
-						pointer-events: none;
-						content: "";
-						position: absolute;
-						top: -1px;
-						left: -1px;
-						width: 100%;
-						height: 100%;
-						border: 1px solid;
-						box-sizing: content-box;
+					&--ok{
+						background-color: white;
+					}
+					&--neither{
+						background-color: white;
+					}
+					&--ng{
+						background-color: white;
 					}
 				}
 			}
@@ -1227,19 +1252,28 @@ table{
 	}
 	
 	// スケジュール
+
+	%events__fixed{
+		min-width: 300px;
+	}
+	
 	.event-area{
 		width: 97vw;
 		margin: 0;
 		.events {
 			table {
-				tr:nth-child(even) {
-					.fixed {
-						min-width: 300px;
+				.events__fixed{
+					&--ok{
+						left: 300px;
+						min-width: 47px;
 					}
-				}
-				tr:nth-child(odd) {
-					.fixed {
-						min-width: 300px;
+					&--neither{
+						min-width: 47px;
+						left: 347px;
+					}
+					&--ng{
+						min-width: 47px;
+						left: 394px;
 					}
 				}
 			}
@@ -1380,6 +1414,15 @@ table{
 	}
 
 	// スケジュール
+
+	%events__fixed{
+		min-width: 180px;
+		font-size: 0.8rem;
+		a{
+			font-size: 0.8rem;
+		}
+	}
+
 	.event-area{
 		.btn--navy{
 			a{
@@ -1388,22 +1431,18 @@ table{
 		}
 		.events {
 			table {
-				tr:nth-child(even) {
-					.fixed {
-						min-width: 180px;
-						font-size: 0.8rem;
-						a{
-							font-size: 0.8rem;
-						}
+				.events__fixed{
+					&--ok{
+						min-width: 30px;
+						left: 180px;
 					}
-				}
-				tr:nth-child(odd) {
-					.fixed {
-						min-width: 180px;
-						font-size: 0.8rem;
-						a{
-							font-size: 0.8rem;
-						}
+					&--neither{
+						min-width: 30px;
+						left: 210px;
+					}
+					&--ng{
+						min-width: 30px;
+						left: 240px;
 					}
 				}
 			}
